--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "the-platform": "^0.9.3",
     "typography": "^0.16.18"
   },
   "keywords": [
