--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.10",
     "prettier": "^1.15.2"
   },
   "repository": {
