--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^4.1.10",
     "gatsby-plugin-tslint": "^0.0.2",
-    "prettier": "^1.15.2",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "prettier": "^1.15.2"
   },
   "repository": {
     "type": "git",
