--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "printWidth": 100
+  "trailingComma": "es5"
 }
