--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "this-town-sucks--website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "We can all agree about one thing...",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Dan Minshew, Patrick Carr",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "formik": "^1.5.0",
@@ -33,7 +33,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
