--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
     "styled-components": "^4.1.3",
